[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy tank_.png" type="Texture" id=1]
[ext_resource path="res://player/player_texture/stryderhc player godot.png" type="Texture" id=2]
[ext_resource path="res://player/player_texture/malta beam godot forward.png" type="Texture" id=3]
[ext_resource path="res://enemy tank 2.png" type="Texture" id=4]
[ext_resource path="res://enemy tank 3.png" type="Texture" id=5]
[ext_resource path="res://script/Node2D.gd" type="Script" id=6]
[ext_resource path="res://player/player_texture/stryder laser cannon out of ammo godot.png" type="Texture" id=7]
[ext_resource path="res://player/player_texture/stryder laser cannon.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="enemytank3" type="Sprite" parent="."]
position = Vector2( 187, -279 )
rotation = 3.14159
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="enemytank2" type="Sprite" parent="."]
position = Vector2( 768, -354 )
rotation = 3.14159
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="enemytank1" type="Sprite" parent="."]
position = Vector2( 454, -114 )
rotation = 3.14159
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="beam" type="Sprite" parent="."]
visible = false
position = Vector2( -120.272, 523.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam11" type="Sprite" parent="."]
visible = false
position = Vector2( -55, 532 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam10" type="Sprite" parent="."]
visible = false
position = Vector2( -56.272, 558.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam9" type="Sprite" parent="."]
visible = false
position = Vector2( -157.272, 532.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam8" type="Sprite" parent="."]
visible = false
position = Vector2( -119.272, 504.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam7" type="Sprite" parent="."]
visible = false
position = Vector2( -119.272, 443.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam6" type="Sprite" parent="."]
visible = false
position = Vector2( -163.272, 500.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam2" type="Sprite" parent="."]
visible = false
position = Vector2( -89.272, 505.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam3" type="Sprite" parent="."]
visible = false
position = Vector2( -119.272, 542.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam4" type="Sprite" parent="."]
visible = false
position = Vector2( -120.272, 559.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="beam5" type="Sprite" parent="."]
visible = false
position = Vector2( -119.272, 485.5 )
scale = Vector2( 0.208, 0.00622877 )
texture = ExtResource( 3 )

[node name="Hover" type="Sprite" parent="."]
position = Vector2( 512, 480 )
rotation = -1.5708
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="longbeam" type="Sprite" parent="."]
position = Vector2( -573, 119 )
scale = Vector2( 0.3, 0.103 )
texture = ExtResource( 3 )
offset = Vector2( 878.388, 4.85437 )

[node name="lazercannon" type="Sprite" parent="."]
position = Vector2( 512, 484 )
rotation = -1.5708
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 8 )
offset = Vector2( 26.6667, 0 )

[node name="lazercannon2" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 484 )
rotation = -1.5708
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )
offset = Vector2( 26.6667, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="scorenum" type="RichTextLabel" parent="."]
margin_left = 12.0
margin_top = 13.0
margin_right = 157.0
margin_bottom = 33.0
rect_scale = Vector2( 2, 2 )
text = "score 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lives" type="RichTextLabel" parent="."]
margin_left = 13.0
margin_top = 45.0
margin_right = 61.0
margin_bottom = 61.0
rect_scale = Vector2( 2, 2 )
text = "Lives 3"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ETdamage" type="RichTextLabel" parent="."]
margin_left = -76.0
margin_top = 49.0
margin_right = -58.0
margin_bottom = 62.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 4, 5.75 )
text = "10.1111"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo" type="RichTextLabel" parent="."]
margin_left = 905.0
margin_top = 559.0
margin_right = 949.0
margin_bottom = 572.0
rect_scale = Vector2( 3, 3 )
text = "100%"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="RichTextLabel" parent="."]
margin_left = 440.0
margin_top = 559.0
margin_right = 518.0
margin_bottom = 571.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 23, 7 )
text = "BaseHP:100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
